--- a/src/components/ExercisesCategories/ExercisesCategories.module.css
+++ b/src/components/ExercisesCategories/ExercisesCategories.module.css
@@ -124,7 +124,10 @@ h2 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 16px;
-    margin: 12px 32px;
+    margin-left: 50%;
+    margin-right: 50%;
+    justify-content: center;
+    max-width: 600px;
   }
 
   .imageContainer {
@@ -133,10 +136,12 @@ h2 {
 
   .categoryButtons {
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: center;
-    margin: 64px 32px 0;
     gap: 20px;
+    margin-top: -30px;
+    margin-bottom: 76px;
+    margin-right: 10%;
   }
 
   .btnCategories {
@@ -179,8 +184,13 @@ h2 {
   .phContainer {
     grid-template-columns: repeat(5, 1fr);
     margin: 12px 128px;
+    margin-left: 50%;
+    margin-right: 50%;
   }
+  
   }
+
+
   .btnCategories.active {
     color: #EFEDE8;
     font-family: Roboto-400;
@@ -198,5 +208,4 @@ h2 {
     font-weight: 400;
     line-height: 24px;
   }
-
-
+ 
