--- a/src/components/ExercisesSubcategoriesList/ExercisesSubcategoriesList.module.css
+++ b/src/components/ExercisesSubcategoriesList/ExercisesSubcategoriesList.module.css
@@ -25,3 +25,10 @@
   display: flex;
   align-items: center;
 }
+
+@media (min-width: 768px) {
+  .backBtn{
+    top: -200px;
+    margin-left: 10%;
+  } 
+}
