--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@ html {
 }
 
 .container {
-  outline: solid 1px red;
+  /* outline: solid 1px red; */
   max-width: 375px;
   margin: 0 auto;
   padding-left: 20px;
