--- a/src/components/ExercisesCategories/ExercisesCategories.module.css
+++ b/src/components/ExercisesCategories/ExercisesCategories.module.css
@@ -25,6 +25,7 @@ body {
   margin-left: 20px;
   padding: 0;
   position: relative;
+  cursor: pointer;
 }
 
 .btnCategories:hover {
@@ -85,6 +86,7 @@ body {
   width: 100%;
   max-width: 335px;
   height: auto;
+  cursor: pointer;
 }
 
 .imageText,
