--- a/src/components/ExercisesCategories/ExercisesCategories.module.css
+++ b/src/components/ExercisesCategories/ExercisesCategories.module.css
@@ -89,6 +89,18 @@ body {
   cursor: pointer;
 }
 
+.img:hover{
+  border-radius: 30px;
+  border: 2px solid #ef8964;
+  /* animation: jump 5s ease; */
+  
+}
+
+/* @keyframes jump {
+  30% { transform: scale(1.1); }
+} */
+
+
 .imageText,
 .categoryName {
   position: absolute;
