completed some ccs styles

--- a/src/components/ExercisesSubcategoriesList/ExercisesSubcategoriesList.module.css
+++ b/src/components/ExercisesSubcategoriesList/ExercisesSubcategoriesList.module.css
@@ -27,6 +27,33 @@
   align-items: center;
 }
 
+.pagination {
+  margin-top: 32px;
+  width: 100%;
+}
+.pagination_bar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+
+.disabledButton {
+  border: unset;
+  width: 14px;
+  height: 14px;
+  background-color:rgba(239, 237, 232, 0.1);
+  border-radius: 50%;
+}
+
+.nextButton {
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  border: 1px solid rgba(230, 83, 60, 1);
+  background-color: rgba(230, 83, 60, 1)
+}
+
 @media (min-width: 768px) {
   .backBtn{
     top: -200px;
